--- a/codingChallenges/codingChallenge.html
+++ b/codingChallenges/codingChallenge.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="codingChallenge4.js"></script>
+    <script src="codingChallenge2-2.js"></script>
 </body>
 
 </html>
