--- a/codingChallenges/codingChallenge.html
+++ b/codingChallenges/codingChallenge.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Challenge</title>
-</head>
+  </head>
 
-<body>
-    <script src="codingChallenge2-4.js"></script>
-</body>
-
+  <body>
+    <script src="codingChallenge3-1.js"></script>
+  </body>
 </html>
